# static-archive

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-image.yml
html/: 404.html  failed-to-read-file.html  file-not-found.html
schema/: README.md  schema.db  schema.sql
src/: main.rs  static_zip.rs
src/static_zip/: lookup.rs  mod.rs
