[package]
name = "static-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
hyper = { version = "0.14.20", features = ["stream"] }
mime_guess = "2.0.4"
serde = { version = "1.0.146", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3.2"
warp = "0.3"
zip = "0.6.3"

[profile.release]
lto = true
