[package]
name = "static-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
zip = "0.6.3"

[profile.release]
lto = true

[profile.dev.package.sqlx-macros]
opt-level = 3
